redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-blog-redis
  namespace: ota-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-blog-redis
  template:
    metadata:
      labels:
        app: admin-blog-redis
    spec:
      containers:
      - name: admin-blog-redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: admin-blog-redis-service
  namespace: ota-network
spec:
  selector:
    app: admin-blog-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
